// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en el componente <GifGrid /> Debe de mostrar items cuando se cargan imágenes useFetchGifs 1`] = `
<Fragment>
  <h3
    className="category-h3 animate__animated animate__bounceIn"
  >
     
    One Punch
     
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Google"
      url="https://google.com.ar"
    />
    <GifGridItem
      id="123"
      key="123"
      title="Google"
      url="https://google.com.ar"
    />
  </div>
</Fragment>
`;

exports[`Pruebas en el componente <GifGrid /> El componente <GifGrid /> debe de mostrarse correctamente 1`] = `
<Fragment>
  <h3
    className="category-h3 animate__animated animate__bounceIn"
  >
     
    One Punch
     
  </h3>
  <p
    className="animate__animated animate__flash"
  >
     Loading... 
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
